--- a/css/articles.css
+++ b/css/articles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto|Suez+One');
+@import url('https://fonts.googleapis.com/css?family=Roboto|Suez+One|Montserrat');
 
 * {
 	margin: 0;
@@ -14,6 +14,8 @@ body, html {
 body {
 	background-color: #fafafa;
 	font-family: Trebuchet MS, Helvetica; 
+	/*color: #232323;*/
+	/*font-family: 'Montserrat', sans-serif;*/
 }
 
 /* Шапка сайта */
@@ -21,13 +23,16 @@ body {
 header {
 	width: 100%;
 	padding: 10px 0.5% 0px 0.5%;
-	background: transparent;
+	/*background: transparent;*/
 	float: left;
 	position: fixed;
+	z-index: 5000;
+	background-color: #fff;
+	border-bottom: 1px solid silver;
 }
 
 header #logo {
-	color: #fff;
+	color: #343434;
 	cursor: pointer;
 }
 
@@ -69,31 +74,16 @@ header #logo span {
 	margin-bottom: 10px;
 }
 
-#about > a {color: #fff}
+#about > a {color: #343434;}
 
 #about > a:hover {
-	color: #b0b0b0;
+	color: #7c7c7c;
 	text-decoration: underline;
 }
 
 #about > a:not(:last-child) {
 	margin-right: 7%;
 }
-
-/* Стили для фиксированной шапки */
-
-.fixed {
-	z-index: 5000;
-	background-color: #fff;
-	border-bottom: 1px solid silver;
-}
-
-header.fixed #logo {
-	color: #343434;
-}
-
-.fixed #about a {color: #343434;}
-.fixed #about a:hover {color: #7c7c7c;}
 
 /* Главный блок на сайте */
 
@@ -137,45 +127,63 @@ header.fixed #logo {
 	color: #ccc;
 }
 
-/* Блок с возможностями */
+/* Блок статьи */
 
-#main {
+#article {
 	float: left;
 	background-color: #f6f6f6;
 	border-top: 2px solid silver;
 	color: #484848;
-	font-size: 1.3em;
+	font-size: 1.1em;
+}
+
+.body_hide {
+	opacity: 0;
+	transition: .9s opacity ease-in-out;
+}
+
+.body_visible {
+	opacity: 1;
 }
 
 @media (min-width: 1401px) {
-	#main {
+	#article {
 		padding: 100px 20%;
 		width: 60%;
 	}
 }
 
 @media (max-width: 1400px) {
-	#main {
+	#article {
 		padding: 100px 10%;
 		width: 80%;
 	}
 }
 
 @media (max-width: 700px) {
-	#main div {
+	#article div {
 		width: 98%!important;
 		margin-bottom: 20px;
 	}
 }
 
-#main div {
-	width: 48%;
-	margin-right: 2%;
-	float: left;
+#article div {
+	width: 100%;
+	/*margin-right: 2%;*/
+	float: right;
 }
 
-#main h2 {font-size: 3em}
-#main span {color: #a0a0a0}
+#article h2 {font-size: 2em; font-weight: bold;}
+#article span {color: #a0a0a0}
+#article p {
+	display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-family: 'Montserrat', sans-serif;
+    color: #232323;
+}
 
 /* Блок с преимуществами */
 
@@ -214,8 +222,6 @@ header.fixed #logo {
 	float: left;
 	width: 100%;
 	max-width: 500px;
-	transition: 0.2s;
-	cursor: pointer;
 }
 
 #overview span {
@@ -232,16 +238,6 @@ header.fixed #logo {
 		margin-left: 10%!important;
 	}
 }
-
-.img img:hover {
-	transform: scale(0.98); /* Увеличиваем масштаб */
-	-webkit-mask-image: linear-gradient(45deg, black, #ec655096);
-}
-
-.img img:hover + span {
-	color: #dcdcdc; /* Увеличиваем масштаб */
-}
-
 
 /* Блок с контактами */
 #contacts {
