--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,20 @@
 	margin: 0;
 	padding: 0;
 	outline: none;
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+}
+
+*:before,
+*:after {
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
 }
 
 body, html {
-	width: 100%;
+	/*width: 100%;*/
 	height: 100%;
 }
 
@@ -15,6 +25,8 @@ body {
 	background-color: #fafafa;
 	font-family: Trebuchet MS, Helvetica; 
 }
+
+/* Шапка сайта */
 
 header {
 	width: 100%;
@@ -36,38 +48,7 @@ header #logo span {
 	font-family: 'Suez One', serif;
 }
 
-@media (min-width: 701px) {
-	#logo {
-		float: left;
-		width: 30%;
-		font-size: 1.1em;
-	}
-	#about {
-		float: right;
-		width: 67%;
-	}
-}
-
-@media (max-width: 700px) {
-	#logo {
-		margin-top: 15px;
-		width: 100%;
-		font-size: 1.5em;
-	}
-	#about {
-		float: left;
-		width: 100%;
-	}
-}
-
-#about {
-	text-align: center;
-	font-size: 1em;
-	line-height: 40px;
-	margin-bottom: 10px;
-}
-
-#about > a {color: #fff}
+#about > a {color: #fff; text-decoration: underline;}
 
 #about > a:hover {
 	color: #b0b0b0;
@@ -78,10 +59,74 @@ header #logo span {
 	margin-right: 7%;
 }
 
+@media (max-width: 666px) {
+	#about > a {display: none;}
+	#logo {
+		float: left;
+	}
+	h3 {
+		font-size: 1.5rem;
+	}
+}
+
+@media (max-width: 767px) and (min-width: 667px) {
+	header #logo span {
+	margin-left: 30px;
+}
+
+	#logo {
+		margin-top: 5px;
+		width: 30%;
+		font-size: 1.5em;
+		float: left;
+	}
+	#about {
+		float: left;
+		width: 70%;
+		margin-bottom: 0;
+		margin-top: 4px;
+	}
+	#about > a:not(:last-child) {
+		margin-right: 2%;
+	}
+}
+
+@media (min-width: 768px) {
+	#logo {
+		float: left;
+		width: 30%;
+		font-size: 1.1em;
+	}
+	#about {
+		float: right;
+		width: 70%;
+	}
+}
+
+#about {
+	text-align: center;
+	font-size: 1em;
+	line-height: 40px;
+	margin-bottom: 10px;
+}
+
+
+
+/*появление страницы*/
+
+.body_hide {
+	opacity: 0;
+	transition: .9s opacity ease-in-out;
+}
+
+.body_visible {
+	opacity: 1;
+}
+
 /* Стили для фиксированной шапки */
 
 .fixed {
-	z-index: 5000;
+	z-index: 1049;
 	background-color: #fff;
 	border-bottom: 1px solid silver;
 }
@@ -94,155 +139,205 @@ header.fixed #logo {
 .fixed #about a:hover {color: #7c7c7c;}
 
 /* Главный блок на сайте */
-
-#top {
-	width: 100%;
-	background-image: url('../img/3.jpg');
-	background-blend-mode: multiply;
-	background-color: #2e3a44;
-	background-size: cover;
-	text-align: center;
-	color: #fff;
+/*.h1, h1 {
+    font-size: 2em;
 }
+.h3, h3 {
+    font-size: 1.17em;
+    }*/
 
-@media (min-width: 1001px) {
-	#top {
-		font-size: 3em;
-		height: 1000px;
-	}
-}
+    h1, h2, h3, h4, h5 {
+    	font-family: 'Roboto Slab', serif;
+    	font-weight: lighter;
+    }
 
-@media (max-width: 1000px) and (min-width: 651px) {
-	#top {
-		font-size: 2em;
-		height: 600px;
-	}
-}
+    #top {
+    	width: 100%;
+    	background-image: url('../img/3.jpg');
+    	background-blend-mode: multiply;
+    	background-color: #2e3a44;
+    	background-size: cover;
+    	text-align: center;
+    	color: #fff;
+    }
 
-@media (max-width: 650px) {
-	#top {
-		font-size: 1.3em;
-		padding-top: 50%;
-		height: 500px;
-	}
-}
+    @media (min-width: 1001px) {
+    	#top {
+    		font-size: 3em;
+    		height: 1000px;
+    	}
+    	.h1, h1 {
+    		font-size: 2em;
+    	}
+    	.h3, h3 {
+    		font-size: 1.17em;
+    	}
+    }
 
-#top h1 {
-	padding-top: 20%;
-}
+    @media (max-width: 1000px) and (min-width: 651px) {
+    	#top {
+    		font-size: 2em;
+    		height: 600px;
+    	}
+    	.h1, h1 {
+    		font-size: 2em;
+    	}
+    	.h3, h3 {
+    		font-size: 1.17em;
+    	}
+    }
 
-#top h2 {
-	color: #ccc;
-}
+    @media (max-width: 650px) {
+    	#top {
+    		font-size: 1.3em;
+    		padding-top: 50%;
+    		height: 500px;
+    	}
+    }
 
-/* Блок с возможностями */
+    #top h1 {
+    	padding-top: 20%;
+    }
 
-#main {
-	float: left;
-	background-color: #f6f6f6;
-	border-top: 2px solid silver;
-	color: #484848;
-	font-size: 1.3em;
-}
+    #top h2 {
+    	color: #ccc;
+    }
 
-@media (min-width: 1401px) {
-	#main {
-		padding: 100px 20%;
-		width: 60%;
-	}
-}
+    /* Блок с преимуществами */
 
-@media (max-width: 1400px) {
-	#main {
-		padding: 100px 10%;
-		width: 80%;
-	}
-}
+    #main h2 {font-size: 3em}
+    #main span {color: #a0a0a0}
 
-@media (max-width: 700px) {
-	#main div {
-		width: 98%!important;
-		margin-bottom: 20px;
-	}
-}
+    #main {
+    	float: left;
+    	background-color: #f6f6f6;
+    	border-top: 2px solid silver;
+    	color: #484848;
+    	font-size: 1.3em;
+    	box-sizing: content-box;
+    }
 
-#main div {
-	width: 48%;
-	margin-right: 2%;
-	float: left;
-}
+    @media (min-width: 1401px) {
+    	#main {
+    		padding: 100px 20%;
+    		width: 60%;
+    	}
+    }
 
-#main h2 {font-size: 3em}
-#main span {color: #a0a0a0}
+    @media (max-width: 1400px) {
+    	#main {
+    		padding: 100px 10%;
+    		width: 80%;
+    	}
+    }
 
-/* Блок с преимуществами */
+    @media (max-width: 666px) {
+    	#main div {
+    		width: 98%!important;
+    		margin-bottom: 20px;
+    		text-align: left;
+    	}
+    	#main h2 {font-size: 1.2em;}
+    	#main span {font-size: 0.8em;}
 
-#overview {
-	float: left;
-	background-image: url('../img/7.jpg');
-	background-blend-mode: multiply;
-	background-color: #4f1c75;
-	background-size: cover;
-	background-attachment: fixed;
+    }
 
-	padding: 100px 0;
-	width: 100%;
-	text-align: center;
-	color: #fff;
-}
+    @media (min-width: 667px) and (max-width: 1000px) {
+    	#main h2 {font-size: 2em;}
+    }
 
-#overview h2 {font-size: 4em}
-#overview h4 {color: #ccc; font-size: 1.5em;}
+    #main div {
+    	width: 48%;
+    	margin-right: 2%;
+    	float: left;
+    }
 
-#overview .img {
-	float: left;
-	width: 30%;
-	margin-right: 5%;
-	margin-top: 50px;
-}
+    /* Блок с возможностями */
 
-#overview .img:nth-child(odd) {
-	margin-left: 18%;
-}
+    #overview {
+    	float: left;
+    	background-image: url('../img/7.jpg');
+    	background-blend-mode: multiply;
+    	background-color: #4f1c75;
+    	background-size: cover;
+    	background-attachment: fixed;
+    	padding: 100px 0;
+    	width: 100%;
+    	text-align: center;
+    	color: #fff;
+    }
 
-#overview img {
-	background: #fafafa;
-	padding: 5px;
-	border: 2px solid silver;
-	float: left;
-	width: 100%;
-	max-width: 500px;
-	transition: 0.2s;
-	cursor: pointer;
-}
+    #overview h2 {font-size: 4em;}
+    #overview h3 {font-size: 2.5em}
+    #overview h4 {color: #ccc; font-size: 1.5em;}
 
-#overview span {
-	float: left;
-	width: 100%;
-	font-size: 2em;
-	margin-top: 10px;
-}
+    #overview .img {
+    	float: left;
+    	width: 30%;
+    	margin-right: 5%;
+    	margin-top: 50px;
+    }
 
-@media (max-width: 700px) {
-	#overview .img {
-		width: 80%!important;
-		margin-right: 0!important;
-		margin-left: 10%!important;
-	}
-}
+    #overview .img:nth-child(odd) {
+    	margin-left: 18%;
+    }
 
-.img img:hover {
-	transform: scale(0.98); /* Увеличиваем масштаб */
-	-webkit-mask-image: linear-gradient(45deg, black, #ec655096);
-}
+    #overview img {
+    	background: #fafafa;
+    	padding: 5px;
+    	border: 2px solid silver;
+    	float: left;
+    	width: 100%;
+    	max-width: 500px;
+    	transition: 0.2s;
+    	cursor: pointer;
+    }
 
-.img img:hover + span {
-	color: #dcdcdc; /* Увеличиваем масштаб */
-}
+    #overview span {
+    	float: left;
+    	width: 100%;
+    	font-size: 2em;
+    	margin-top: 10px;
+    }
+
+    @media (max-width: 666px) {
+    	#overview .img {
+    		width: 80%!important;
+    		margin-right: 0!important;
+    		margin-left: 10%!important;
+    	}
+    	#overview h2 {
+        font-size: 3em;
+    	}
+    	#overview h3 {
+        font-size: 2em;
+    	}
+    	#overview span {
+        font-size: 1.3em;
+    	}
+    	#overview {
+        background-attachment: scroll;
+    	}
+    }
+
+    @media (min-width: 667px) and (max-width: 1000px) {
+    	#overview span {
+        font-size: 1.5em;
+    	}
+    }
+
+    .img img:hover {
+    	transform: scale(0.98); /* Увеличиваем масштаб */
+    	-webkit-mask-image: linear-gradient(45deg, black, #ec655096);
+    }
+
+    .img img:hover + span {
+    	color: #dcdcdc;
+    }
 
 
-/* Блок с контактами */
-#contacts {
+    /* Блок с контактами */
+/*#contacts {
 	width: 100%;
 	float: left;
 	padding-bottom: 40px;
@@ -257,6 +352,8 @@ h1, h2, h3, h4, h5 {
 }
 
 #contacts h5 {font-size: 3em; color: #4f4f4f}
+
+#contacts h3 {font-size: 2em; color: #4f4f4f}
 
 #form_input {
 	margin-top: 15px;
@@ -302,7 +399,7 @@ h1, h2, h3, h4, h5 {
 	border-color: #333;
 }
 
-.btn {
+.mybtn {
 	float: left;
 	border-radius: 5px;
 	padding: 5px 9px;
@@ -314,100 +411,110 @@ h1, h2, h3, h4, h5 {
 	font-family: 'Roboto Slab', serif;
 }
 
-.btn:hover {
+.mybtn:hover {
 	background-color: #c15443;
-}
+	}*/
 
-/* Вопросы и ответы */
+	/* Вопросы и ответы */
 
-#faq {
-	background-color: #fff;
-	border-top: 2px dashed #e4e3e3;
-	width: 100%;
-	float: left;
-	padding-top: 70px;
-	padding-bottom: 70px;
-}
-
-@media (min-width: 801px) {
-	#faq div {
-		width: 25%;
-		margin-left: 6%;
+	#faq {
+		background-color: #fff;
+		border-top: 2px dashed #e4e3e3;
+		width: 100%;
 		float: left;
+		padding-top: 70px;
+		padding-bottom: 70px;
 	}
-}
 
-@media (max-width: 800px) {
-	#faq div {
-		width: 80%;
-		margin-left: 10%;
-		float: left;
+	@media (min-width: 801px) {
+		#faq div {
+			width: 25%;
+			margin-left: 6%;
+			float: left;
+		}
 	}
-}
 
-#faq .title {
-	font-weight: lighter;
-	color: #a3a0ad;
-	margin-bottom: 20px;
-	font-size: 2.2em;
-}
+	@media (max-width: 800px) {
+		#faq div {
+			width: 80%;
+			margin-left: 10%;
+			float: left;
+		}
+	}
 
-#faq .heading {
-	color: #7d7d7d;
-	font-size: 1.3em;
-	font-weight: bold;
-}
+	#faq .title {
+		font-weight: lighter;
+		color: #a3a0ad;
+		margin-bottom: 20px;
+		font-size: 2.2em;
+	}
 
-#faq p {
-	font-family: Arimo, Helvetica, sans-serif;
-	-webkit-font-smoothing: antialiased;
-	color: #4a4a4a;
-	font-size: 0.95em;
-	margin-bottom: 40px;
-}
-<<<<<<< HEAD
+	#faq .heading {
+		color: #7d7d7d;
+		font-size: 1.3em;
+		font-weight: bold;
+	}
 
-/*кнопка "Вверх"*/
+	#faq p {
+		font-family: Arimo, Helvetica, sans-serif;
+		-webkit-font-smoothing: antialiased;
+		color: #4a4a4a;
+		font-size: 0.95em;
+		margin-bottom: 40px;
+	}
 
-#buttonUp {   
-   display: inline-block;
-  background-color: #fe980091;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  border-radius: 4px;
-  position: sticky;
-  bottom: 30px;
-  left: 30px;
-  transition: background-color .3s, 
-    opacity .5s, visibility .5s;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1000; 
-} 
+	/*кнопка "Вверх"*/
 
-#buttonUp:hover {   
-   cursor: pointer;   
-   background-color: #333; 
-} 
+/*	#buttonUp {   
+		display: inline-block;
+		background-color: #fe980091;
+		width: 50px;
+		height: 50px;
+		text-align: center;
+		border-radius: 4px;
+		position: sticky;
+		bottom: 30px;
+		left: 30px;
+		transition: background-color .3s, 
+		opacity .5s, visibility .5s;
+		opacity: 0;
+		visibility: hidden;
+		z-index: 1000; 
+	} 
 
-#buttonUp:active {   
-   background-color: #555; 
-} 
+	#buttonUp:hover {   
+		cursor: pointer;   
+		background-color: #333; 
+	} 
 
-#buttonUp::after {
-   content: "\f077";
-   font-family: FontAwesome;
-   font-weight: normal;
-   font-style: normal;
-   font-size: 2em;
-   line-height: 50px;
-   color: #fff; 
-} 
+	#buttonUp:active {   
+		background-color: #555; 
+	} 
 
-#buttonUp.show {
-  opacity: 1;
-  visibility: visible;
-}
-=======
->>>>>>> 32c8e2ecd1d8b67ab6eddeecacac930b814a0707
+	#buttonUp::after {
+		content: "\f077";
+		font-family: FontAwesome;
+		font-weight: normal;
+		font-style: normal;
+		font-size: 2em;
+		line-height: 50px;
+		color: #fff; 
+	} 
+
+	#buttonUp.show {
+		opacity: 1;
+		visibility: visible;
+		}*/
+
+		.form-control {
+			width: 95%;
+		}
+		.form-control.is-invalid, .form-control.is-valid {
+			width: 90%;
+		}
+
+		.modal-header h5 {
+			font-family: Trebuchet MS, Helvetica;
+			font-weight: lighter;
+		}
+
